# ai-tools-spike

./: .env.sample  README.md  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
langchain_spike/: agent_quickstart.py  basic_usage.py  helpers.py  s1_chat_persona.py  s2_chat_with_websearch.py  s7_chat_with_middleware.py  template_from_file.py
langchain_spike/templates/: product_name_prompt.json
semantic_spike/: README.md  basic_usage.py  helpers.py  s1_chat_persona.py  s2_chat_with_web_search.py  s7_chat_with_middleware.py  s8_planners.py
semantic_spike/Plugins/ChatPlugin/ApiGee/: config.json
semantic_spike/Plugins/ChatPlugin/Chat35/: config.json  skprompt.txt
semantic_spike/Plugins/ChatPlugin/Chat35_16k/: config.json
semantic_spike/Plugins/FunPlugin/Joke/: config.json
