[tool.poetry]
name = "ai-tools-spike"
version = "0.1.0"
description = "spike to evaluate ai tools"
authors = ["Tess Ferrandez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
semantic-kernel = "^0.9.1b1"
langchain = "^0.1.11"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
